--- a/browser/js/common/directives/stock-modifier/stock-modifier.html
+++ b/browser/js/common/directives/stock-modifier/stock-modifier.html
@@ -2,13 +2,13 @@
   <div class="flex-container-row flex-vertical-center">
     <span ng-bind="item.stock"></span>
     <span ng-bind=""></span>
-    <button class="sqn-btn-positive" ng-click="toggleModifyStock()">Modify Stock</button>
+    <button class="sqn-btn-positive" ng-click="toggleModifyStock()" ng-bind="editLabel"></button>
   </div>
 </header>
 <div ng-show="editingStock">
   <form name="modifyStockForm" class="flex-container-row">
     <input type="number" class="sqnInputNumber-wide" ng-model="modAmount" name="newStockAmount" ng-required="true" min="1"></input>
-    <button class="sqn-btn-positive" ng-click="addStock($event)" ng-disabled="modifyStockForm.$invalid">Add Stock</button>
-    <button class="sqn-btn-danger" ng-click="removeStock($event)" ng-disabled="modifyStockForm.$invalid">Remove Stock</button>
+    <button class="sqn-btn-positive" ng-click="addStock($event)" ng-disabled="modifyStockForm.$invalid" ng-class="{'sqn-btn-disabled': modifyStockForm.$invalid }">Add Stock</button>
+    <button class="sqn-btn-danger" ng-click="removeStock($event)" ng-disabled="modifyStockForm.$invalid" ng-class="{'sqn-btn-disabled': modifyStockForm.$invalid }">Remove Stock</button>
   </form>
 </div>
