--- a/public/js/shop-checkout/shop-checkout.html
+++ b/public/js/shop-checkout/shop-checkout.html
@@ -1,4 +1,7 @@
 <section class="shop-checkout-page container-fluid">
+  <div ng-show="processing" class="order-update">
+    <p>Processing order...</p>
+  </div>
   <header class="flex-container-row flex-vertical-center product-header">
     <h2>Shop Checkout</h2>
     <a class="sqn-btn" ui-sref="shopFront">Back To Store To Modify Order</a>
