--- a/public/js/shop-order-amend/shop-order-amend.html
+++ b/public/js/shop-order-amend/shop-order-amend.html
@@ -1,15 +1,18 @@
 <section class="shop-checkout-page container-fluid">
+  <div ng-show="processing" class="order-update">
+    <p>Processing order...</p>
+  </div>
   <header>
     <div class="flex-container-row flex-vertical-center product-header">
       <h2>Order Amendment</h2>
-      <button class="sqn-btn-danger">Cancel Order</button>
+      <button class="sqn-btn-danger" ng-click="">Cancel Order</button>
       <a class="sqn-btn" ui-sref="shopFront">Back To Store</a>
     </div>
     <h4 class="order-amendment">Sorry, it looks like there's a rush on some of the products! We have suggested new quantities.</h4>
   </header>
   <div class="row">
     <div ng-show="initFailed" class="item-not-available">
-      <p>Sorry, an error has occurred with your order. Please click the link above to go back to the store.</p>
+      <p>Sorry, an error has occurred with your order. Please click <a ui-sref="shopFront"><strong>here</strong></a> to go back to the store.</p>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h3 class="checkout-header">Your items: </h3>
@@ -18,7 +21,7 @@
           <div class="flex-container-row checkout-item-flex">
             <h4 ng-bind="item.title"></h4><h5>${{ item.price }}</h5>
           </div>
-          <div ng-show="!item.amendedQuantity" class="flex-container-row checkout-item-flex">
+          <div ng-show="!item['amendedQuantity']" class="flex-container-row checkout-item-flex">
             <p ng-bind="item.display_options"></p><h5>Qty: <strong ng-bind="item.quantity"></strong></h5>
           </div>
           <div ng-show="item.amendedQuantity || item.amendedQuantity === 0">
@@ -41,14 +44,20 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h3 class="checkout-header">Order details:</h3>
       <div class="" >
-        <form ng-submit="checkUserEmail()" name="validateEmail" novalidate>
-          <label class="checkout-label">Your email: </label>
-          <input type="email" class="sqnInputEmail" ng-model="order.email" required></input>
-          <input class="sqn-btn-positive" type="submit" value="Confirm Email" ng-disabled="validateEmail.$invalid" ng-class="{'sqn-btn-disabled': validateEmail.$invalid }"></input>
-        </form>
-        <div ng-show="emailValidated" class="checkout-email-validation">
-          <p>Great, you are attending the event. Your details have been added to the order.</p>
-        </div>
+        <table class="order-amendment-details">
+          <tr>
+            <td>Email: </td>
+            <td ng-bind="order.email"></td>
+          </tr>
+          <tr>
+            <td>Name: </td>
+            <td ng-bind="order.recipient"></td>
+          </tr>
+          <tr>
+            <td>Payment Method: </td>
+            <td ng-bind="order.paymentMethod"></td>
+          </tr>
+        </table>
         <form name="orderDetails" ng-submit="submitOrder()" novalidate>
           <div ng-show="deliverable">
             <label class="checkout-label">Recipient Full Name</label>
@@ -64,20 +73,9 @@
             <label class="checkout-label">Postal Code</label>
             <input type="text" ng-model="order.address.post_code"></input>
           </div>
-          <div class="checkout-payment">
-            <h4>Payment method</h4>
-            <div class="radio" ng-show="!deliverable">
-              <label>
-              <input type="radio" ng-model="order.paymentMethod" value="cash" ng-required="true"></input>Cash on collection</label>
-            </div>
-            <div class="radio">
-              <label>
-              <input type="radio" ng-model="order.paymentMethod" value="deposit" ng-required="true"></input>Bank Deposit</label>
-            </div>
-          </div>
           <h3>Total: <em>${{ order.totalPrice }}</em></h3>
           <div>
-            <button class="sqn-btn-positive" ng-disabled="orderNotValid" ng-class="{ 'sqn-btn-disabled': orderNotValid }">Submit Order</button>
+            <button class="sqn-btn-positive" ng-disabled="orderNotValid" ng-class="{ 'sqn-btn-disabled': orderNotValid }" ng-click="submitOrder()">Submit Order</button>
           </div>
         </form>
       </div>
