--- a/browser/js/common/directives/product-management/product-management.html
+++ b/browser/js/common/directives/product-management/product-management.html
@@ -1,4 +1,7 @@
 <div class="row">
+  <div ng-show="processing" class="order-update">
+    <p>Saving...</p>
+  </div>
   <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
     <form class="new-product-form" name="addNewProductForm" ng-submit="addNewProduct()">
         <label class="field-label" for="productName">Product Name</label>
