--- a/browser/js/common/directives/order-management/order-management.html
+++ b/browser/js/common/directives/order-management/order-management.html
@@ -10,6 +10,7 @@
     <div>
       <h5><strong>Payment Method:</strong> {{ order.paymentMethod }}</h5>
       <h5><strong>Delivery Method:</strong> {{ order.deliveryMethod}}</h5>
+      <h5 ng-if="order['trackingData']"><strong>Tracking Number:</strong> {{ order.trackingData }}</h5>
     </div>
     <div class="order-management-address" ng-show="order.deliveryMethod === 'Post/Courier'">
       <h5><strong>Delivery Address: </strong></h5>
@@ -38,26 +39,28 @@
       </tbody>
     </table>
     <div>
-      <h5 ng-if="order.shippingPrice && order.deliveryMethod === 'Post/Courier'"><strong>Shipping Price: </strong>${{ order.shippingPrice }}</h5>
-      <h5><strong>Total Order Price:</strong> ${{ order.totalPrice }}</h5>
-      <section>
+      <section class="order-management-prices">
+        <h5 ng-if="order.shippingPrice && order.deliveryMethod === 'Post/Courier'"><strong>Shipping Price: </strong>${{ order.shippingPrice }}</h5>
+        <h5><strong>Total Order Price:</strong> ${{ order.totalPrice }}</h5>
+      </section>
+      <section class="order-management-subsection">
         <h5>Payment State</h5>
         <div class="flex-container-row">
           <button ng-repeat="paystate in paymentState" class="sqn-btn sqn-btn-flex" ng-class="{ 'product-option-selected': order.paymentState === paystate }" ng-bind="paystate" ng-disabled="order.paymentState === paystate || order.orderStatus === 'cancelled'" ng-click="updateOrderPayment(paystate)"></button>
         </div>
       </section>
-      <section>
+      <section class="order-management-subsection">
         <h5>Order State</h5>
         <div class="flex-container-row">
           <button class="sqn-btn sqn-btn-flex" ng-repeat="ostate in orderState" ng-class="{'product-option-selected': order.orderStatus === ostate}" ng-disabled="order.orderStatus === ostate || order.orderStatus === 'cancelled'" ng-bind="ostate" ng-click="updateOrderStatus(ostate)"></button>
         </div>
-        <form class="order-management-tracking" ng-if="(order.orderStatus === 'dispatched') && (order.deliveryMethod === 'Post/Courier')" ng-submit="addTrackingData()" name="orderTrackingForm">
+        <form class="order-management-tracking" ng-if="(order.orderStatus === 'dispatched') && (order.deliveryMethod === 'Post/Courier') && !order['trackingData']" ng-submit="addTrackingData()" name="orderTrackingForm">
           <label>Tracking Number:</label>
           <input type="text" class="sqnInputActive" ng-model="order.trackingData" name="orderTrackingData" ng-required="true"></input>
           <input class="sqn-btn-positive" type="submit" value="Add Tracking Number" ng-disabled="orderTrackingForm.$invalid" ng-class="{'sqn-btn-disabled': orderTrackingForm.$invalid }"></input>
         </form>
       </section>
-      <section>
+      <section class="order-management-cancel-order">
         <h5>Cancel Order: <strong>This returns all stock and is not reversible<strong></h5>
         <div class="flex-container-row">
           <button class="sqn-btn-danger sqn-btn-flex" ng-click="cancelOrder()" ng-disabled="order.orderStatus === 'cancelled'">Cancel Order</button>
