--- a/public/js/common/directives/attendee-order-detail/attendee-order-detail.html
+++ b/public/js/common/directives/attendee-order-detail/attendee-order-detail.html
@@ -24,6 +24,7 @@
       <h5><strong>Total Order Price: </strong>${{ orderDetails.totalPrice }}</h5>
     </div>
   </div>
+  <h4 class="order-items-title"><strong>Order Items</strong></h4>
   <div class="flex-container-row">
     <div class="order-detail-item" ng-repeat="item in orderDetails.products">
       <h5 class="order-detail-item-title" ng-bind="item.title"></h5>
