--- a/browser/js/shop-order-success/shop-order-success.html
+++ b/browser/js/shop-order-success/shop-order-success.html
@@ -12,7 +12,7 @@
       <p>Ensure you have the order number on hand when collecting items. We don't want you to miss out on a piece of history!</p>
     </div>
   </div>
-  <footer>
-    <h4>You should have also receive an email of your purchase. If you have not received on within one day, please email <a href="mailto:sunil.unka@gmail.com?cc=siale.mann@nzdf.mil.nz&subject=Email%20requested%20for%20order%20{{ order.order_ref }}">the committee.</a></h4>
+  <footer class="checkout-success-spam-message">
+    <h5>You should receive an email of your purchase.</h5><p>Please make sure you check your spam folders for the email.</p><p>If you have not received it within one day, please email <a href="mailto:sunil.unka@gmail.com?cc=siale.mann@nzdf.mil.nz&subject=Email%20requested%20for%20order%20{{ order.order_ref }}">the committee.</a></p>
   </footer>
 </section>
